@@ -1,5 +1,7 @@
 version 0.75.03
 	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
+	Pentax K-5 support (thx to Tomasz Kos for sharing the info)
+	Reading lens id fields for K-x
 
 version 0.75.02 ( 2011-06-30 )
 	Better bracket ev handling for K-x
